--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+attrs==19.3.0
 entrypoints==0.3
 flake8==3.7.9
+importlib-metadata==1.6.0
 mccabe==0.6.1
+more-itertools==8.2.0
 numpy==1.18.3
 opencv-python==4.2.0.34
+packaging==20.3
 pep8==1.7.1
-pkg-resources==0.0.0
+pluggy==0.13.1
+py==1.8.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
+pyparsing==2.4.7
+pytest==5.4.1
+six==1.14.0
+wcwidth==0.1.9
+zipp==3.1.0
