--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,39 @@
 attrs==19.3.0
+bleach==3.1.5
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+cryptography==2.9.2
+docutils==0.16
 entrypoints==0.3
 flake8==3.7.9
+idna==2.9
 importlib-metadata==1.6.0
+jeepney==0.4.3
+keyring==21.2.1
 mccabe==0.6.1
 more-itertools==8.2.0
 numpy==1.18.3
 opencv-python==4.2.0.34
-packaging==20.3
+packaging==20.4
 pep8==1.7.1
+pkginfo==1.5.0.1
 pluggy==0.13.1
 py==1.8.1
 pycodestyle==2.5.0
+pycparser==2.20
 pyflakes==2.1.1
+Pygments==2.6.1
 pyparsing==2.4.7
 pytest==5.4.1
+readme-renderer==26.0
+requests==2.23.0
+requests-toolbelt==0.9.1
+SecretStorage==3.1.2
 six==1.14.0
+tqdm==4.46.0
+twine==3.1.1
+urllib3==1.25.9
 wcwidth==0.1.9
+webencodings==0.5.1
 zipp==3.1.0
