--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bleach==3.1.5
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
+colorama==0.4.3
 cryptography==2.9.2
 decorator==4.4.2
 docutils==0.16
@@ -44,6 +45,7 @@ pyzmq==19.0.1
 readme-renderer==26.0
 requests==2.23.0
 requests-toolbelt==0.9.1
+rfc3986==1.4.0
 SecretStorage==3.1.2
 six==1.14.0
 tornado==6.0.4
